# elog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.deprecated  NOTICE  README.md  build.bat  build.sh  memcheck_bench.sh  run_bench.bat  run_bench.sh  run_tests.bat  run_tests.sh  vcbuild.bat  vcclean.bat
src/elog/inc/: CMakeLists.txt  elog.h  elog_aligned_alloc.h  elog_api.h  elog_async_schema_handler.h  elog_async_target.h  elog_async_target_provider.h  elog_atomic.h  elog_base_formatter.h  elog_buffer.h  elog_buffer_receptor.h  elog_buffered_file_target.h  elog_buffered_file_writer.h  elog_cache.h  elog_common.h  elog_common_def.h  elog_concurrent_ring_buffer.h  elog_config.h  elog_config_service_client.h  elog_config_service_params.h  elog_config_service_publisher.h  elog_config_service_redis_params.h  elog_config_service_redis_publisher.h  elog_datadog_target.h  elog_db_formatter.h  elog_db_schema_handler.h  elog_db_target.h  elog_db_target_provider.h  elog_def.h  elog_deferred_target.h  elog_error_handler.h  elog_expression.h  elog_field_receptor.h  elog_field_selector.h  elog_field_spec.h  elog_file_target.h  elog_filter.h  elog_flush_policy.h  elog_fmt_lib.h  elog_formatter.h  (+64 more)
src/elog/inc/async/: CMakeLists.txt  elog_async_schema_handler.h  elog_async_target.h  elog_async_target_provider.h  elog_deferred_target.h  elog_multi_quantum_target.h  elog_quantum_target.h  elog_queued_target.h
src/elog/inc/cfg_srv/: CMakeLists.txt  elog_config_server_details.h  elog_config_service_etcd_params.h  elog_config_service_etcd_publisher.h  elog_config_service_etcd_reader.h  elog_config_service_etcd_user.h  elog_config_service_params.h  elog_config_service_publisher.h  elog_config_service_reader.h  elog_config_service_redis_params.h  elog_config_service_redis_publisher.h  elog_config_service_redis_reader.h  elog_config_service_redis_user.h  elog_config_service_user.h
src/elog/inc/db/: CMakeLists.txt  elog_db_formatter.h  elog_db_schema_handler.h  elog_db_target.h  elog_db_target_provider.h  elog_mysql_db_target.h  elog_pgsql_db_target.h  elog_redis_db_target.h  elog_sqlite_db_target.h
src/elog/inc/file/: CMakeLists.txt  elog_buffered_file_target.h  elog_buffered_file_writer.h  elog_file_target.h  elog_segmented_file_target.h
src/elog/inc/ipc/: CMakeLists.txt  elog_ipc_schema_handler.h  elog_ipc_target_provider.h
src/elog/inc/mon/: CMakeLists.txt  elog_datadog_target.h  elog_grafana_json_target.h  elog_mon_schema_handler.h  elog_mon_target.h  elog_mon_target_provider.h  elog_otel.h  elog_otel_target.h  elog_sentry_target.h
src/elog/inc/msg/: CMakeLists.txt  elog_binary_format_provider.h  elog_msg.h  elog_msg_formatter.h  elog_msg_server.h  elog_msg_stats.h  elog_msg_target.h  elog_proto_receptor.h
src/elog/inc/msgq/: CMakeLists.txt  elog_kafka_msgq_target.h  elog_msgq_schema_handler.h  elog_msgq_target.h  elog_msgq_target_provider.h
src/elog/inc/net/: CMakeLists.txt  elog_net_schema_handler.h  elog_net_target_provider.h
src/elog/inc/rpc/: CMakeLists.txt  elog_grpc_target.h  elog_grpc_target.inl  elog_rpc_formatter.h  elog_rpc_schema_handler.h  elog_rpc_target.h  elog_rpc_target_provider.h
src/elog/inc/sys/: CMakeLists.txt  elog_syslog_target.h  elog_win32_event_log_target.h
src/elog/src/: CMakeLists.txt  elog.cpp  elog_api_config.cpp  elog_api_config_service.cpp  elog_api_config_service.h  elog_api_life_sign.cpp  elog_api_life_sign.h  elog_api_log_source.cpp  elog_api_log_source.h  elog_api_log_target.cpp  elog_api_log_target.h  elog_api_reload_config.cpp  elog_api_reload_config.h  elog_api_time_source.cpp  elog_api_time_source.h  elog_async_schema_handler.cpp  elog_async_target.cpp  elog_async_target_provider.cpp  elog_base_formatter.cpp  elog_buffer.cpp  elog_buffer_receptor.cpp  elog_buffered_file_target.cpp  elog_buffered_file_writer.cpp  elog_cache.cpp  elog_cache.h  elog_comm_util_log_handler.cpp  elog_comm_util_log_handler.h  elog_common.cpp  elog_common.h  elog_concurrent_hash_table.h  elog_config.cpp  elog_config_loader.cpp  elog_config_loader.h  elog_config_parser.cpp  elog_config_parser.h  elog_config_service.cpp  elog_config_service.h  elog_config_service_client.cpp  elog_config_service_internal.h  elog_config_service_publisher.cpp  (+127 more)
src/elog/src/async/: CMakeLists.txt  elog_async_schema_handler.cpp  elog_async_target.cpp  elog_async_target_provider.cpp  elog_deferred_target.cpp  elog_deferred_target_provider.cpp  elog_deferred_target_provider.h  elog_multi_quantum_target.cpp  elog_multi_quantum_target_provider.cpp  elog_multi_quantum_target_provider.h  elog_quantum_target.cpp  elog_quantum_target_provider.cpp  elog_quantum_target_provider.h  elog_queued_target.cpp  elog_queued_target_provider.cpp  elog_queued_target_provider.h
src/elog/src/cfg_srv/: CMakeLists.txt  elog_api_config_service.cpp  elog_api_config_service.h  elog_config_server_details.cpp  elog_config_service.cpp  elog_config_service.h  elog_config_service_client.cpp  elog_config_service_etcd_publisher.cpp  elog_config_service_etcd_reader.cpp  elog_config_service_etcd_user.cpp  elog_config_service_publisher.cpp  elog_config_service_redis_publisher.cpp  elog_config_service_redis_reader.cpp  elog_config_service_redis_user.cpp  elog_config_service_user.cpp
src/elog/src/db/: CMakeLists.txt  elog_db_formatter.cpp  elog_db_schema_handler.cpp  elog_db_target.cpp  elog_db_target_provider.cpp  elog_mysql_db_target.cpp  elog_mysql_db_target_provider.cpp  elog_mysql_db_target_provider.h  elog_pgsql_db_target.cpp  elog_pgsql_db_target_provider.cpp  elog_pgsql_db_target_provider.h  elog_redis_db_target.cpp  elog_redis_db_target_provider.cpp  elog_redis_db_target_provider.h  elog_sqlite_db_target.cpp  elog_sqlite_db_target_provider.cpp  elog_sqlite_db_target_provider.h
src/elog/src/file/: CMakeLists.txt  elog_buffered_file_target.cpp  elog_buffered_file_writer.cpp  elog_file_schema_handler.cpp  elog_file_schema_handler.h  elog_file_target.cpp  elog_segmented_file_target.cpp
src/elog/src/ipc/: CMakeLists.txt  elog_ipc_schema_handler.cpp  elog_pipe_target_provider.cpp  (+1 more)
(+104 files in other folders)
